--- a/source/components/inner-header.html
+++ b/source/components/inner-header.html
@@ -4,8 +4,7 @@
             <picture>
                 <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-                <img src="img/logo-mobile.svg" alt="Логотип Мишка"
-                class="page-header__logo-image">
+                <img src="img/logo-mobile.svg" alt="Логотип Мишка" class="page-header__logo-image">
             </picture>     
         </a>
     <nav class="page-header__main-nav main-nav">
