--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,7 +2,7 @@
     @include indents();
     @include font(13px, 24px, 400);
 
-    color: #444;
+    color: $grey;
 
     margin-top: 25px;
     margin-bottom: 45px;
@@ -56,11 +56,11 @@
 
     display: block;
 
-    padding-left: 62px; 
-}
+    padding-left: 62px;
 
-.form__type input[type="radio"] {
-    display: none;
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .form__type input[type="radio"] + label::before {
@@ -69,7 +69,7 @@
     content: "";
     width: 36px;
     height: 36px;
-    border: 2px solid #444;
+    border: 2px solid $grey;
     border-radius: 50%;
 
     left: 0;
@@ -101,17 +101,13 @@
 
 }
 
-.form__color input[type="checkbox"] {
-    display: none;
-}
-
 .form__color input[type="checkbox"] + label::before {
     position: absolute;
 
     content: "";
     width: 36px;
     height: 35px;
-    border: 2px solid #444;
+    border: 2px solid $grey;
 
     left: 0;
     top: 0px;
@@ -123,20 +119,48 @@
     content: "";
     width: 22px;
     height: 10px;
-    border-bottom: 2px solid #000;
-    border-left: 2px solid #000;
+    border-bottom: 2px solid #231f20;
+    border-left: 2px solid #231f20;
     transform: rotate(-45deg);
 
     left: 7px;
     top: 10px;
 }
 
+.form__color input[type="checkbox"]:hover + label::before,
+.form__type input[type="radio"]:hover + label::before {
+    border: 2px solid $light-green;
+    cursor: pointer;
+}
+
+.form__color input[type="checkbox"]:active + label::before,
+.form__type input[type="radio"]:active + label::before {
+    border: 2px solid #c7c7c7;
+}
+
+.form__color input[type="checkbox"]:focus + label::before,
+.form__type input[type="radio"]:focus + label::before {
+    border: 2px solid $light-green;
+}
+
 .form input[type="text"],
 .form input[type="tel"],
-.form input[type="email"],
-.form textarea {
+.form input[type="email"] {
     font: inherit;
     @include font(17px, 18px, 400);
+
+    box-sizing: border-box;
+    width: 100%;
+    height: 52px;
+    padding-top: 16px;
+    padding-bottom: 14px;
+
+    &:hover,
+    &:focus {
+        border-bottom: 2px solid $light-green;
+        cursor: pointer;
+        outline: 0;
+    }
 }
 
 .form__name ul {
@@ -157,45 +181,63 @@
 
 .form__name input[type="text"] {
     border: none;
-    border-bottom: 2px solid #000;
-
-    padding-top: 17px;
-    padding-bottom: 15px;
+    border-bottom: 2px solid #000;  
 }
 
-
+.form__input-wrapper {
+    position: relative;
+}
 
 .form__phone input[type="tel"] {
     width: 100%;
     border: none;
     border-bottom: 2px solid #000;
 
-    background: url("../img/icons/icon-phone.svg") no-repeat 229px 15px;
+    background-color: inherit;
 
-    padding-top: 17px;
-    padding-bottom: 15px;
-
+    padding-right: 40px;
     margin-bottom: 30px;
+}
 
-    
+.form__phone-icon,
+.form__email-icon {
+    fill: #ccc;
+    position: absolute;
+}
+
+.form__phone-icon {
+    top: 15px;
+    right: 8px;
 }
 
 
-.form__mail input[type="email"] {
-    width: 100%;
+.form__email input[type="email"] {
     border: none;
     border-bottom: 2px solid #000;
 
-    background: url("../img/icons/icon-mail.svg") no-repeat 226px 12px;
-
-    padding-top: 17px;
-    padding-bottom: 15px;
-
+    background-color: inherit;
+  
+    padding-right: 40px;
     margin-bottom: 30px;
+}
+
+.form__email-icon {
+    top: 15px;
+    right: 4px;
+}
+
+.form__phone input[type="tel"]:hover + .form__phone-icon,
+.form__email input[type="email"]:hover + .form__email-icon,
+.form__phone input[type="tel"]:focus + .form__phone-icon, 
+.form__email input[type="email"]:focus + .form__email-icon,{
+    fill: $light-green;
 }
 
 
 .form__area textarea{
+    font: inherit;
+    @include font(17px, 18px, 400);
+
     width: 100%;
     box-sizing: border-box;
 
@@ -205,6 +247,15 @@
 
     margin-top: 19px;
     margin-bottom: 18px;
+
+    outline: none;
+
+    &:hover,
+    &:focus {
+        border: 2px solid $light-green;
+        cursor: pointer;
+        outline: none;
+    }
 }
 
 .form__required {
@@ -225,6 +276,7 @@
 
     .form__container {
         background-color: #f1f1f1;
+        padding-top: 50px;
     }
 
     .form__info {
@@ -295,7 +347,6 @@
     .form__color ul {
         display: grid;
         grid-template-columns: 280px 239px;
-        margin-top: 50px;
         margin-bottom:26px;
     }
     
@@ -344,28 +395,43 @@
         margin-right: auto;
     }
 
-    .form__name input[type="text"] {
+    .form__input-wrapper {
         flex-grow: 1;
+    }
+
+    .form__name input[type="text"] {  
         padding-top: 0;
     }
 
     .form__phone legend {
-        margin-top: 67px;  
     }
 
     .form__phone input[type="tel"] { 
         background-position: 450px -3px;
-        margin-top: 67px; 
+        
         padding-top: 0px;
-    
-        margin-bottom: 38px;   
+        padding-right: 70px;
+
+        margin-bottom: 25px;   
+    }
+
+    .form__phone-icon {
+        top: 10px;
+        right: 25px;
     }
     
-    .form__mail input[type="email"] {
+    .form__email input[type="email"] {
         background-position: 447px -5px;
+
         padding-top: 0px;
+        padding-right: 70px;
     
         margin-bottom: 50px;
+    }
+
+    .form__email-icon {
+        top: 7px;
+        right: 22px;
     }
 
     .form__area legend {
@@ -414,10 +480,18 @@
 
     .form__phone input[type="tel"] { 
         background-position: 665px -3px;
+        padding-right: 40px;
+    }
+    .form__phone-icon {
+        right: 8px;
     }
     
-    .form__mail input[type="email"] { 
+    .form__email input[type="email"] { 
         background-position: 664px -3px;
+        padding-right: 40px;
+    }
+    .form__email-icon {
+        right: 4px;
     }
 
     .form__area textarea {    
