Исправлен фокус кнопки play

--- a/source/sass/blocks/production-video.scss
+++ b/source/sass/blocks/production-video.scss
@@ -67,6 +67,9 @@
     left: 79px;
     background-color: transparent;
     border: none;
+    &:focus {
+        outline: none;
+    }
 }
 
 .production-video__icon-play {
