--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,3 +12,4 @@
 @import "blocks/catalog.scss";
 @import "blocks/production-video.scss";
 @import "blocks/form.scss";
+@import "blocks/modal.scss";
