--- a/source/components/footer.html
+++ b/source/components/footer.html
@@ -3,38 +3,39 @@
     <svg  class="page-footer__logo" alt="Логотип магазина Мишка" width="101.615px" height="34.056px">
       <use xlink:href="#logo-mishka"></use>
     </svg>
-    <div class="page-footer__social social">
-        <ul class="social__list">
-            <li class="social__item">
-                <a class="social__link social__link--instagram" href="#">
-                    <svg class="social__icon" alt="Инстаграм" width="21.769px" height="21.334px">
+    <div class="page-footer__social">
+        <ul class="page-footer__social-list">
+            <li class="page-footer__social-item">
+                <a class="page-footer__social-link--instagram" href="#">
+                    <svg class="page-footer__social-icon" alt="Инстаграм" width="21.769px" height="21.334px">
                       <use xlink:href="#instagram"></use>
                         </svg>
                 </a>
             </li>
-            <li class="social__item">
-                <a class="social__link social__link--facebook" href="#">
-                    <svg  class="social__icon"  alt="Фейсбук" width="14.962px" height="27.718px">
+            <li class="page-footer__social-item">
+                <a class="page-footer__social-link--facebook" href="#">
+                    <svg  class="page-footer__social-icon"  alt="Фейсбук" width="14.962px" height="27.718px">
                       <use xlink:href="#facebook"></use>
                       </svg>
                 </a>
             </li>
-            <li class="social__item">
-                <a class="social__link social__link--twitter" href="#">
-                    <svg  class="social__icon"  alt="Твиттер" width="23.494px" height="20.168px">
+            <li class="page-footer__social-item">
+                <a class="page-footer__social-link--twitter" href="#">
+                    <svg  class="page-footer__social-icon"  alt="Твиттер" width="23.494px" height="20.168px">
                       <use xlink:href="#twitter"></use>
                       </svg>
                 </a>
             </li>
         </ul>
     </div>
-    <div class="page-footer__copyright copyright">
-        <b class="copyright__text">Разработано</b>
-        <a href="#" class="copyright__link">
-            <svg class="copyright__logo" alt="Лого html-академии" width="26.943px" height="34.09px">
+    <!-- <div class="page-footer__copyright copyright"> -->
+        <!-- <b class="copyright__text">Разработано</b> -->
+        <a href="#" class="page-footer__copyright-link">
+            Разработано
+            <svg class="page-footer__copyright-logo" alt="Лого html-академии" width="26.943px" height="34.09px">
               <use xlink:href="#logo-htmlacademy"></use>              
             </svg>
         </a>
-    </div>
+    <!-- </div> -->
     </div>
 </footer>
