--- a/source/components/header.html
+++ b/source/components/header.html
@@ -10,25 +10,25 @@
     <nav class="page-header__main-nav main-nav">
         <button class="main-nav__toggle main-nav__toggle--opened"  type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
-            <div class="cite-list__wrapper">
-                <ul class="main-nav__list cite-list">
-                    <li class="cite-list__item">
-                        <a class="cite-list__link" href="catalog.html">Каталог товаров</a>
+            <div class="main-nav__cite-wrapper">
+                <ul class="main-nav__cite-list">
+                    <li class="main-nav__cite-item">
+                        <a class="main-nav__cite-link" href="catalog.html">Каталог товаров</a>
                     </li>
-                    <li class="cite-list__item">
-                        <a class="cite-list__link" href="form.html">Вязание на заказ</a>
+                    <li class="main-nav__cite-item">
+                        <a class="main-nav__cite-link" href="form.html">Вязание на заказ</a>
                     </li>
                 </ul>
-                <ul class="main-nav__list user-list">
-                    <li class="user-list__item user-list__search">
-                        <a href="#" class="user-list__link">Поиск по сайту
+                <ul class="main-nav__user-list">
+                    <li class="main-nav__user-item main-nav__user-search">
+                        <a href="#" class="main-nav__user-link">Поиск по сайту
                         <svg width="17.6px" height="17.6px">
                             <use xlink:href="#search"></use>
                         </svg>
                     </a>
                     </li>
-                    <li class="user-list__item user-list__cart">
-                        <a href="#" class="user-list__link">Корзина: <span>пока пуста</span>
+                    <li class="main-nav__user-item main-nav__user-cart">
+                        <a href="#" class="main-nav__user-link">Корзина: <span>пока пуста</span>
                         <svg width="20.294px" height="18.849px">
                             <use xlink:href="#cart"></use>                        
                         </svg> 
@@ -36,10 +36,10 @@
                     </li>
                 </ul>
             </div>
-            <div class="sub-cite-list__wrapper">
-                <ul class="main-nav__list sub-cite__list">
-                    <li class="sub-cite__item"><a href="#" class="sub-list__link">Новые поступления</a></li>
-                    <li class="sub-cite__item"><a href="#" class="sub-list__link">Распродажа</a></li>
+            <div class="main-nav__sub-cite-wrapper">
+                <ul class="main-nav__sub-cite-list">
+                    <li class="main-nav__sub-cite-item"><a href="#" class="main-nav__sub-cite-link">Новые поступления</a></li>
+                    <li class="main-nav__sub-cite-item"><a href="#" class="main-nav__sub-cite-link">Распродажа</a></li>
                 </ul>
                 <small class="main-nav__delivery-info">Бесплатная доставка по России</small>
             </div>
