--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -92,7 +92,7 @@
 
 .form__color ul {
     margin-top: 19px;
-    margin-bottom: 9px;
+    margin-bottom: 32px;
 }
 
 .form__color li {
@@ -151,9 +151,9 @@
 
     box-sizing: border-box;
     width: 100%;
-    height: 52px;
+    height: 48px;
     padding-top: 16px;
-    padding-bottom: 14px;
+    padding-bottom: 12px;
 
     &:hover,
     &:focus {
@@ -164,7 +164,7 @@
 }
 
 .form__name ul {
-    margin-top: 24px;
+    margin-top: 30px;
     margin-bottom: 31px;
 }
 
@@ -172,7 +172,7 @@
     display: flex;
     flex-direction: column-reverse;
     
-    margin-bottom: 21px;
+    margin-bottom: 25px;
 }
 
 .form__name label {
@@ -240,11 +240,10 @@
 
     width: 100%;
     box-sizing: border-box;
-
     border: 2px solid #444;
+    resize: none;
 
     padding: 16px;
-
     margin-top: 19px;
     margin-bottom: 18px;
 
@@ -284,12 +283,11 @@
     }
 
     .form fieldset {
-        display: flex;
+        position: relative;
     }
 
     .form legend {
-    
-        width: 165px;
+        position: absolute;
 
         &::after{
             display: none;
@@ -298,6 +296,7 @@
 
     .form ul {
         @include indents();
+        padding-left: 165px;
     }
 
     .form__type legend {
@@ -305,7 +304,7 @@
     }
 
     .form__type ul {
-        margin-bottom: 26px;
+        margin-bottom: 50px;
     }
 
     .form__type li {
@@ -337,10 +336,8 @@
         top: 15px;
     }
 
-    
-
     .form__color legend {
-        margin-top: 67px;        
+        top: 17px;        
     }
 
     .form__color ul {
@@ -372,37 +369,37 @@
     }
 
     .form__name legend {
-        margin-top: 67px;
+        top: 69px;
     }
 
     .form__name ul {
-        width: 100%;
-        margin-top: 67px;
-        margin-bottom: 10px;
+        margin-top: 57px;
+        margin-bottom: 50px;
     }
 
     .form__name li {
         flex-direction: row-reverse;
         
-        margin-bottom: 40px;
+        margin-bottom: 28px;
     }
 
     .form__name label {
-        padding-left: 0;
-        padding-right: 25px;
+        padding: 10px 25px 0 0;
         margin-left: 0;
         margin-right: auto;
     }
 
     .form__input-wrapper {
-        flex-grow: 1;
+        padding-left: 165px;
     }
 
     .form__name input[type="text"] {  
         padding-top: 0;
     }
 
-    .form__phone legend {
+    .form__phone legend,
+    .form__email legend  {
+        top: 14px;
     }
 
     .form__phone input[type="tel"] { 
@@ -433,11 +430,15 @@
         right: 22px;
     }
 
+    .form__area {
+        padding-left: 165px;
+    }
+
     .form__area legend {
-        margin-top: 67px; 
+        top: 67px; 
     }
     
-    .form__area textarea {    
+    .form__area textarea {   
         margin-top: 50px;
         margin-bottom: 53px;
     }
@@ -450,6 +451,7 @@
     }
     
     .form__button {
+        @include indents();
         width: 230px;
     
         margin-bottom: 50px;
@@ -464,14 +466,13 @@
     }
 
     .form fieldset {
-        padding-left: 62px;
+        padding-left: 12px;
         padding-right: 175px;
     }
 
     .form legend {
-        width: 114px;
+        left: 55px;
     }
-
 
     .form__color ul {
         grid-template-columns: 262px 264px 348px;
