--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -6,12 +6,20 @@
     background-color: #f1f1f1;
 }
 
-.social {
+.page-footer__social {
     @include indents();
-    width: 141px;
+    min-height: 80px;
+    width: 260px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #e5e5e5;
+
+    margin: 0 auto;
 }
 
-.social__list {
+.page-footer__social-list {
     @include indents();
     width: 141px;
        
@@ -21,7 +29,7 @@
     align-items: baseline;
 }
 
-.social__icon {
+.page-footer__social-icon {
     &:hover {
         fill: #46c1ae;
     }
@@ -30,44 +38,35 @@
     }
 }
 
-.page-footer__social {
-    
-    margin: 0 auto;
-
-    width: 260px;
-    min-height: 80px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid #e5e5e5;
-}
-
-.copyright {
+.page-footer__copyright-link {
+    @include indents();
+    @include font(19px, 80px, 700);
+    position: relative;
+    display: block;
     width: 182px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+    min-height: 80px;
+    text-decoration: none;
+    color: #000;
 
-.copyright__text {
-    @include font(19px, 19px, 700);
-}
+    margin: 0 auto;
 
-.copyright__logo {
-    fill: $light-green;
-    &:hover {
+    &:active {
+        opacity: 0.3;
+    }
+    &:hover .page-footer__copyright-logo {
         fill: #46c1ae;
     }
-    &:active {
+    &:active .page-footer__copyright-logo {
         opacity: 0.3;
     }
 }
 
-.page-footer__copyright {
-    margin: 0 auto;
+.page-footer__copyright-logo {
+    position: absolute;
+    top: 22px;
+    right: 0;
 
-    min-height: 80px;
+    fill: $light-green;
 }
 
 @media(min-width: $tablet-width) {
@@ -92,7 +91,7 @@
         border-bottom: none;
     }
 
-    .copyright {
+    .page-footer__copyright-link {
         margin: 0;
     }
     
