--- a/source/sass/blocks/top-item.scss
+++ b/source/sass/blocks/top-item.scss
@@ -27,7 +27,7 @@
     margin-bottom: 22px;
 }
 
-.table {
+.top-item__table {
     @include indents();
     @include font(15px, 20px);
     color: $grey;
@@ -35,12 +35,12 @@
     width: 100%;
 }
 
-.table__tr {
+.top-item__table-tr {
     @include indents();
     border-bottom: 1px solid $light-grey;
 }
 
-.table__desc {
+.top-item__table-desc {
     @include indents();
     width: 100px;
     padding-top: 10px;
@@ -48,12 +48,12 @@
     
 }
 
-.table__value {
+.top-item__table-value {
     @include indents();
 }
 
 @media (min-width: $tablet-width) {
-    .table {
+    .top-item__table {
         @include font(15px, 20px);
         width: 291px;
     }
