--- a/source/components/header.html
+++ b/source/components/header.html
@@ -8,7 +8,7 @@
             </picture>     
         </a>
     <nav class="page-header__main-nav main-nav">
-        <button class="main-nav__toggle main-nav__toggle--opened"  type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <button class="main-nav__toggle main-nav__toggle--opened main-nav__toggle--nojs"  type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
             <div class="main-nav__cite-wrapper">
                 <ul class="main-nav__cite-list">
