--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -36,6 +36,10 @@
     z-index: 1;
 }
 
+.modal-overlay.modal-show {
+    display: block;
+}
+
 .modal-cart__title {
     @include indents();
     @include font(25px, 30px, 700);
