--- a/source/components/header.html
+++ b/source/components/header.html
@@ -1,49 +1,52 @@
 <header class="page-header">
     <div class="page-header__wrapper">
-        <a href="#" class="page-header__logo">
+        <a href="index.html" class="page-header__logo">
             <picture>
                 <source media="(min-width: 1200px)" srcset="img/logo-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
                 <img src="img/logo-mobile.svg" alt="Логотип Мишка" class="page-header__logo-image">
-            </picture>     
+            </picture>
         </a>
-    <nav class="page-header__main-nav main-nav">
-        <button class="main-nav__toggle main-nav__toggle--opened main-nav__toggle--nojs"  type="button"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-nav__wrapper">
-            <div class="main-nav__cite-wrapper">
-                <ul class="main-nav__cite-list">
-                    <li class="main-nav__cite-item">
-                        <a class="main-nav__cite-link" href="catalog.html">Каталог товаров</a>
-                    </li>
-                    <li class="main-nav__cite-item">
-                        <a class="main-nav__cite-link" href="form.html">Вязание на заказ</a>
-                    </li>
-                </ul>
-                <ul class="main-nav__user-list">
-                    <li class="main-nav__user-item main-nav__user-search">
-                        <a href="#" class="main-nav__user-link">Поиск по сайту
-                        <svg width="17.6px" height="17.6px">
-                            <use xlink:href="#search"></use>
-                        </svg>
-                    </a>
-                    </li>
-                    <li class="main-nav__user-item main-nav__user-cart">
-                        <a href="#" class="main-nav__user-link">Корзина: <span>пока пуста</span>
-                        <svg width="20.294px" height="18.849px">
-                            <use xlink:href="#cart"></use>                        
-                        </svg> 
-                    </a>                       
-                    </li>
-                </ul>
+        <nav class="page-header__main-nav main-nav">
+            <button class="main-nav__toggle main-nav__toggle--opened main-nav__toggle--nojs" type="button"><span
+                    class="visually-hidden">Открыть меню</span></button>
+            <div class="main-nav__wrapper">
+                <div class="main-nav__cite-wrapper">
+                    <ul class="main-nav__cite-list">
+                        <li class="main-nav__cite-item">
+                            <a class="main-nav__cite-link" href="catalog.html">Каталог товаров</a>
+                        </li>
+                        <li class="main-nav__cite-item">
+                            <a class="main-nav__cite-link" href="form.html">Вязание на заказ</a>
+                        </li>
+                    </ul>
+                    <ul class="main-nav__user-list">
+                        <li class="main-nav__user-item main-nav__user-search">
+                            <a href="#" class="main-nav__user-link">Поиск по сайту
+                                <svg width="17.6px" height="17.6px">
+                                    <use xlink:href="#search"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="main-nav__user-item main-nav__user-cart">
+                            <a href="#" class="main-nav__user-link">Корзина: <span>пока пуста</span>
+                                <svg width="20.294px" height="18.849px">
+                                    <use xlink:href="#cart"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="main-nav__sub-cite-wrapper">
+                    <ul class="main-nav__sub-cite-list">
+                        <li class="main-nav__sub-cite-item"><a href="#" class="main-nav__sub-cite-link">Новые
+                                поступления</a></li>
+                        <li class="main-nav__sub-cite-item"><a href="#" class="main-nav__sub-cite-link">Распродажа</a>
+                        </li>
+                    </ul>
+                    <small class="main-nav__delivery-info">Бесплатная доставка по России</small>
+                </div>
             </div>
-            <div class="main-nav__sub-cite-wrapper">
-                <ul class="main-nav__sub-cite-list">
-                    <li class="main-nav__sub-cite-item"><a href="#" class="main-nav__sub-cite-link">Новые поступления</a></li>
-                    <li class="main-nav__sub-cite-item"><a href="#" class="main-nav__sub-cite-link">Распродажа</a></li>
-                </ul>
-                <small class="main-nav__delivery-info">Бесплатная доставка по России</small>
-            </div>
-        </div>
-    </nav>
+        </nav>
     </div>
 </header>
